# hotdogornot

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  TASKS.md
training/: .env.example  .gitignore  README.md  SMAObjectDetection.ipynb  pyproject.toml
training/configs/: cad_sources.yaml  classes.yaml  datasheet_dimensions.yaml  detector.yaml  embedder.yaml
training/data/: sample_images.csv
training/deploy/: README.md  setup_relay.sh  setup_training.sh
training/deploy/systemd/: rfcai-auto-retrain.service  rfcai-auto-retrain.timer  (+15 more)
training/docs/: architecture.md  capture_protocol.md  classifier_baseline_findings.md  classifier_journey.md  codex_brief.md  continuous_learning_architecture.md  hex_measurement_prototype_findings.md  mating_face_repair_guide.md  measurement_baseline_findings.md  runbook.md  yolo_hybrid_evaluation_2026-05-11.md
training/reports/: holdout_2026-05-11_baseline_restored.json  holdout_2026-05-11_baseline_restored.md  holdout_2026-05-11_post_improvements.json  holdout_2026-05-11_post_improvements.md  holdout_2026-05-11_u2netp.json  holdout_2026-05-11_u2netp.md
training/rfconnectorai/: ensemble.py  ensemble_averager.py
training/scripts/: _fix_v8_labels.sh  _kick_extract_more.sh  _kick_mlp_head.sh  _kick_proto.sh  _kick_resnet50.sh  _kick_retrain.sh  _kick_two_head.sh  _kick_v19_28ep.sh  _kick_v20_seed1.sh  _restore_quarantine.sh  audit_training_quality.py  auto_label_videos.py  auto_retrain.py  backup_training_data.sh  demo_app.py  download_from_csv.py  download_test_set.md  eval_holdout.py  exp_arch_variants.py  exp_proto_train.py  exp_two_head_train.py  gpu_smoke.py  ingestion_daemon.py  labeler.py  measure_connector.py  render_synthetic.sh  run_pipeline.sh  seed_labeler_users.py  seed_scraped_into_training.py  sync_with_relay.sh  synthesize_from_clean.py  verify_mating_faces.py  zoom_recrop_training.py
training/tests/: conftest.py  test_aperture_detector.py  test_arcface_loss.py  test_aruco_detector.py  test_auth.py  test_auto_retrain.py  test_build_references.py  test_build_yolo_dataset.py  test_class_predictor.py  test_classes.py  test_classifier.py  test_crop_instances.py  test_data_audit.py  test_dataset.py  test_depth_utils.py  test_domain_randomization.py  test_embedder.py  test_end_to_end.py  test_ensemble.py  test_ensemble_averager.py  test_eval.py  test_eval_harness.py  test_export_mobile.py  test_family_detector.py  test_frame_averager.py  test_gender_detector.py  test_hex_detector.py  test_hierarchical_loss.py  test_ingest_process_upload.py  test_ingestion_daemon.py  test_instance_schema.py  test_label_encoding.py  test_labeler.py  test_make_pretrained_embedder.py  test_materials.py  test_mesh_loader.py  test_model_registry.py  test_onnx_export.py  test_pipeline.py  test_predict_service_fg_filter.py  (+15 more)
(+228 files in other folders)
