[project]
name = "rfconnectorai"
version = "0.1.0"
description = "RF connector identification training pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "timm>=1.0.0",
    "ultralytics>=8.2.0",
    "numpy>=1.26",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "trimesh>=4.0",
    "pyrender>=0.1.45",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rfconnectorai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
