[project]
name = "rfconnectorai"
version = "0.1.0"
description = "RF connector identification training pipeline"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "timm>=1.0.0",
    "ultralytics>=8.2.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "trimesh>=4.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "matplotlib>=3.8",
    "imagehash>=4.3",
    "jinja2>=3.1",
    # Web image fetchers (DDG primary, icrawler kept as legacy)
    "ddgs>=4.0",
    "icrawler>=0.6",
    "python-dotenv>=1.0",
    # UI / demo
    "streamlit>=1.30",
    # Server (relay machine subset, but kept here for unified install)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# `bpy` only ships wheels for specific Python versions (4.2 is 3.10/3.11 only,
# nothing newer at time of writing). The legacy bpy-based renderer is opt-in
# now — install with `.venv/bin/pip install -e ".[blender]"` if you need it.
blender = [
    "bpy>=4.2.0",
]
# pyrender requires a working OpenGL driver. Default install skips it; the
# 3D angled-renderer needs it.
render = [
    "pyrender>=0.1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rfconnectorai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
